# sentinel-2-jp2-tlm

./: README.md  T32TQM_20241115T100159_B03_10m.tiff  T32TQM_20241115T100159_B03_10m_with_TLM.jp2  benchmark.sh
SAFE_sample_with_TLM/S2B_MSIL2A_20241115T100159_N0511_R122_T32TQM_20241115T125542.SAFE/: manifest.safe
SAFE_sample_with_TLM/S2B_MSIL2A_20241115T100159_N0511_R122_T32TQM_20241115T125542.SAFE/DATASTRIP/DS_2BPS_20241115T125542_S20241115T100633/QI_DATA/: FORMAT_CORRECTNESS.xml  GENERAL_QUALITY.xml  SENSOR_QUALITY.xml
SAFE_sample_with_TLM/S2B_MSIL2A_20241115T100159_N0511_R122_T32TQM_20241115T125542.SAFE/GRANULE/L2A_T32TQM_A040188_20241115T100633/: MTD_TL.xml
SAFE_sample_with_TLM/S2B_MSIL2A_20241115T100159_N0511_R122_T32TQM_20241115T125542.SAFE/GRANULE/L2A_T32TQM_A040188_20241115T100633/AUX_DATA/: AUX_CAMSFO  AUX_ECMWFT
SAFE_sample_with_TLM/S2B_MSIL2A_20241115T100159_N0511_R122_T32TQM_20241115T125542.SAFE/GRANULE/L2A_T32TQM_A040188_20241115T100633/IMG_DATA/R10m/: T32TQM_20241115T100159_AOT_10m.jp2  T32TQM_20241115T100159_B02_10m.jp2  T32TQM_20241115T100159_B04_10m.jp2  T32TQM_20241115T100159_B08_10m.jp2  T32TQM_20241115T100159_TCI_10m.jp2  T32TQM_20241115T100159_WVP_10m.jp2
SAFE_sample_with_TLM/S2B_MSIL2A_20241115T100159_N0511_R122_T32TQM_20241115T125542.SAFE/GRANULE/L2A_T32TQM_A040188_20241115T100633/IMG_DATA/R20m/: T32TQM_20241115T100159_AOT_20m.jp2  T32TQM_20241115T100159_B01_20m.jp2  T32TQM_20241115T100159_B02_20m.jp2  T32TQM_20241115T100159_B03_20m.jp2  (+10 more)
SAFE_sample_with_TLM/S2B_MSIL2A_20241115T100159_N0511_R122_T32TQM_20241115T125542.SAFE/GRANULE/L2A_T32TQM_A040188_20241115T100633/QI_DATA/: GENERAL_QUALITY.xml  GEOMETRIC_QUALITY.xml  MSK_CLASSI_B00.jp2  MSK_CLDPRB_20m.jp2  MSK_CLDPRB_60m.jp2  MSK_DETFOO_B01.jp2  MSK_DETFOO_B02.jp2  MSK_DETFOO_B03.jp2  MSK_DETFOO_B04.jp2  MSK_DETFOO_B05.jp2  MSK_DETFOO_B06.jp2  MSK_DETFOO_B07.jp2  MSK_DETFOO_B08.jp2  MSK_DETFOO_B09.jp2  MSK_DETFOO_B10.jp2  MSK_DETFOO_B11.jp2  MSK_DETFOO_B12.jp2  MSK_DETFOO_B8A.jp2  MSK_QUALIT_B01.jp2  MSK_QUALIT_B02.jp2  MSK_QUALIT_B03.jp2  MSK_QUALIT_B04.jp2  MSK_QUALIT_B05.jp2  MSK_QUALIT_B06.jp2  MSK_QUALIT_B07.jp2  MSK_QUALIT_B08.jp2  MSK_QUALIT_B09.jp2  MSK_QUALIT_B10.jp2  MSK_QUALIT_B11.jp2  MSK_QUALIT_B12.jp2  MSK_QUALIT_B8A.jp2  MSK_SNWPRB_20m.jp2  MSK_SNWPRB_60m.jp2  SENSOR_QUALITY.xml  T32TQM_20241115T100159_PVI.jp2
SAFE_sample_without_TLM/S2B_MSIL2A_20241115T100159_N0511_R122_T32TQM_20241115T125542.SAFE/: INSPIRE.xml  MTD_MSIL2A.xml
SAFE_sample_without_TLM/S2B_MSIL2A_20241115T100159_N0511_R122_T32TQM_20241115T125542.SAFE/DATASTRIP/DS_2BPS_20241115T125542_S20241115T100633/QI_DATA/: GEOMETRIC_QUALITY.xml  RADIOMETRIC_QUALITY.xml
SAFE_sample_without_TLM/S2B_MSIL2A_20241115T100159_N0511_R122_T32TQM_20241115T125542.SAFE/GRANULE/L2A_T32TQM_A040188_20241115T100633/QI_DATA/: FORMAT_CORRECTNESS.xml  L2A_QUALITY.xml  MSK_CLASSI_B00.jp2  MSK_CLDPRB_20m.jp2  MSK_CLDPRB_60m.jp2  MSK_DETFOO_B01.jp2  MSK_DETFOO_B02.jp2  MSK_DETFOO_B03.jp2  MSK_DETFOO_B04.jp2  MSK_DETFOO_B05.jp2  MSK_DETFOO_B06.jp2  MSK_DETFOO_B07.jp2  MSK_DETFOO_B08.jp2  MSK_DETFOO_B09.jp2  MSK_DETFOO_B10.jp2  MSK_DETFOO_B11.jp2  MSK_DETFOO_B12.jp2  MSK_DETFOO_B8A.jp2  MSK_QUALIT_B01.jp2  MSK_QUALIT_B02.jp2  MSK_QUALIT_B03.jp2  MSK_QUALIT_B04.jp2  MSK_QUALIT_B05.jp2  MSK_QUALIT_B06.jp2  MSK_QUALIT_B07.jp2  MSK_QUALIT_B08.jp2  MSK_QUALIT_B09.jp2  MSK_QUALIT_B10.jp2  MSK_QUALIT_B11.jp2  MSK_QUALIT_B12.jp2  MSK_QUALIT_B8A.jp2  MSK_SNWPRB_20m.jp2  MSK_SNWPRB_60m.jp2  T32TQM_20241115T100159_PVI.jp2
jp2io/: README.md  demo.py  pyproject.toml
jp2io/src/jp2io/: __init__.py  exception.py  index.py  parsefile.py  provider.py  rasterio_setup_openjpeg.py
jp2io/src/jp2io/zarr/: codec.py  virtualizarr.py
jp2io/tests/: conftest.py  test_jp2io.py
jp2io/zarr-demo/: .gitattributes  L2A-32UPC.parquet  README.md  kerchunk.ipynb  pyproject.toml
(+50 files in other folders)
