[project]
name = "zarr-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "distributed>=2025.4.1",
    "fsspec[s3]>=2025.3.2",
    "imagecodecs>=2025.3.30",
    "jp2io[zarr]",
    "jupyter>=1.1.1",
    "kerchunk>=0.2.8",
    "matplotlib>=3.10.1",
    "xarray>=2025.3.1",
    "zarr>=3.0.7",
]

[tool.uv.sources]
jp2io = { workspace = true }
