[project]
name = "zarr-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "distributed>=2025.4.1",
    "fsspec[s3]>=2025.3.2",
    "jp2io[zarr]",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
]

[tool.uv.sources]
jp2io = { workspace = true }
